# fin-equation-analysis

./: .flake8  .gitignore  .pre-commit-config.yaml  config.yaml  pyproject.toml
fin_equation_analysis/: main.py
fin_equation_analysis/cross_section/: CrossSection.py  __init__.py  polygon.py
fin_equation_analysis/fin/: __init__.py  axial_profile.py  cross_section.py  fin.py  types.py
fin_equation_analysis/notebooks/: learn_scipy.ipynb  uniform_vs_linear_pin_fin.ipynb
fin_equation_analysis/profile/: __init__.py  polygon.py  profile.py
fin_equation_analysis/scripts/: learn_scipy.py  uniform_vs_linear_pin_fin.py
