[tool.poetry]
name = "fin_equation_analysis"
version = "0.1.0"
description = "2023 Spring BME3104 Heat Transfer Final Project"
authors = ["David Natanael <85625605+dvnatanael@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
jupyterlab = "^3.6.3"

numpy = "^1.24.3"
sympy = "^1.11.1"
matplotlib = "^3.7.1"
scipy = "^1.10.0,!=1.10.1"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.20.0"

pre-commit = "^3.2.2"
black = { extras = ["jupyter"], version = "^23.3.0" }
isort = "^5.12.0"
pycln = "^2.1.3"
nb-clean = "^2.4.0"
jupytext = "^1.14.5"
mypy = "^1.2.0"
mypy-extensions = "^1.0.0"
flake8 = "^6.0.0"
flake8-black = "^0.3.6"
flake8-isort = "^6.0.0"

[tool.poe.tasks]
test = "pytest --tb=short"
black = "black --config=pyproject.toml"
isort = "isort --settings-path=pyproject.toml"
pycln = "pycln -a"
mypy = "mypy --pretty"
flake = "flake8"

[tool.poe.tasks.lint]
sequence = [
    { cmd = "cls" },
    { ref = "isort ${file}" },
    { ref = "pycln ${file}" },
    { ref = "black ${file}" },
    { ref = "mypy" },
    { ref = "flake" },
]
ignore_fail = true

[[tool.poe.tasks.lint.args]]
name = "file"
default = "."
positional = true
multiple = true

[tool.black]
target-version = ['py310']

[tool.isort]
float_to_top = true
profile = "black"
py_version = 310
skip = [".gitignore"]
lines_after_imports = 2

[tool.pycln]
all = true
silence = true

[tool.mypy]
mypy_path = "fin_equation_analysis"
files = "."
explicit_package_bases = true
namespace_packages = true
strict = true
exclude = ['^__pycache__$']


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
